--- a/docker-compose.migrate.yml
+++ b/docker-compose.migrate.yml
@@ -7,8 +7,7 @@ services:
     networks: 
       - doot
     environment:
-      # TODO - Use env variable      
-      LOCAL_DB_CONNECTION_STRING: "Server=db;Port=5432;Database=doot;User ID=postgres;Password=postgres"
+      LOCAL_DB_CONNECTION_STRING: "Server=db;Port=5432;Database=doot;User ID=postgres;Password=${DB_PASSWORD}
     restart: on-failure
     ports:
       - "5000:80"
