--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,31 @@
 ﻿version: "3.5"
 services:
+  reverse-proxy:
+    image: traefik:v2.4
+    container_name: "REVERSE_PROXY"
+    networks:
+      - doot
+    command:
+      - --providers.docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    ports:
+    - "80:80"
   db:
-    image: "postgres"
+    image: postgres
+    container_name: "DATABASE"
     networks:
       - doot
     environment:
       POSTGRES_DB: "doot"
-      # TODO - Use env variable      
-      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_PASSWORD: "${DB_PASSWORD}"
     volumes:
       - db_data:/var/lib/postgresql/data/
     ports:
       - "5432:5432"
       
   api:
+    container_name: "API"
     build:
       context: .
       dockerfile: Api/Dockerfile
@@ -21,11 +33,14 @@ services:
       - doot
     environment:
       # TODO - Use env variable      
-      LOCAL_DB_CONNECTION_STRING: "Server=db;Port=5432;Database=doot;User ID=postgres;Password=postgres"
+      LOCAL_DB_CONNECTION_STRING: "Server=db;Port=5432;Database=doot;User ID=postgres;Password=${DB_PASSWORD}"
     restart: on-failure
     ports:
       - "5000:80"
       - "5001:443"
+    labels:
+      # TODO - Use variable for domain
+      - "traefik.http.routers.api.rule=Host(`${API_DOMAIN}`)"
 
 networks:
   doot:
