--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
           <PrivateAssets>all</PrivateAssets>
